# Range-Doppler-Diffusion

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py
configs/: base_config.json
notebooks/: all_code.ipynb
src/: __init__.py  cfar.py  config.py  dataset.py  ddim_sampler.py  evaluation.py  inference.py  trainer.py  visfuncs.py
src/data/: __init__.py  pipeline.py  radar_dataset.py  transforms.py
src/evaluation/: __init__.py  cfar.py  metrics.py  plotting.py
src/inference/: __init__.py  inference.py
src/models/: __init__.py  ddim_sampler.py  diffusion.py  unet.py
src/train/: trainer.py
src/visualization/: __init__.py  visfuncs.py
