[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "rddiffusion"
version = "0.1.0"
description = "Diffusion model for radar target detection using UNet architecture with Student-T noise scheduling"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Ari Gra"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
]

[project.urls]
Homepage = "https://github.com/arigra/rddiff"
Repository = "https://github.com/arigra/rddiff.git"
Issues = "https://github.com/arigra/rddiff/issues"

[project.scripts]
rddiffusion = "main:main"

[tool.setuptools]
packages = ["src", "src.models"]
